--- a/vtoptimize.tex
+++ b/vtoptimize.tex
@@ -1,5 +1,37 @@
 \documentclass[modern]{aastex63}
 
+\usepackage{acro}
+\usepackage{amsmath}
+\usepackage{amssymb}
+
+\newcommand{\dd}{\mathrm{d}}
+\newcommand{\diff}[2]{\frac{\dd #1}{\dd #2}}
+
+\DeclareAcronym{BBH}{
+  short = {BBH},
+  long = {binary black hole}
+}
+\DeclareAcronym{BNS}{
+  short = {BNS},
+  long = {binary neutron star}
+}
+\DeclareAcronym{EM}{
+  short = {EM},
+  long = {electromagnetic}
+}
+\DeclareAcronym{GW}{
+  short = {GW},
+  long = {gravitational wave}
+}
+\DeclareAcronym{IFO}{
+  short = {IFO},
+  long = {interferometer}
+}
+\DeclareAcronym{SNR}{
+  short = {SNR},
+  long = {signal to noise ratio}
+}
+
 \begin{document}
 
 \title{Strategies for Tuning Downtime and Duty Cycle to Optimize Gravitational
@@ -14,7 +46,98 @@ the duty cycle of multiple, heterogeneous GW detectors, to maximize the number
 of detections.  I consider networks that are representative of likely
 configurations in the near future and mid-2020s. \end{abstract}
 
-\section*{ }
+\section{Preliminaries}
+
+It is almost always the right choice to optimize the number of detections,
+$N_\mathrm{det}$ which scales as
+%
+\begin{equation}
+  N_\mathrm{det} \propto V T,
+\end{equation}
+%
+where $V$ is the sensitive volume for a particular source type, and $T$ is the
+overall uptime.  In a Euclidean universe (appropriate for \ac{BNS} events, and
+even a good approximation for \ac{BBH} events up until the 3G era),
+%
+\begin{equation}
+  V \propto \rho^3
+\end{equation}
+%
+where $\rho$ is the \ac{SNR} of a representative source at a fixed distance. Due
+to the cubic scaling with \ac{SNR}, for a single detector, it is almost always
+the right decision to trade a small amount of downtime for a sensitivity
+improvement that boosts the \ac{SNR}.
+
+For multiple detectors, however, the issue of scheduling of downtimes has an
+effect.  In a multi-detector network, \acp{SNR} add in quadrature
+%
+\begin{equation}
+  \rho = \sqrt{\sum_{i=1}^{N_\mathrm{IFO}} \rho_i^2},
+\end{equation}
+%
+and the overall observation time depends on the scheduling strategy.
+
+Here we will assume that the sensitive volume is dominated by the \ac{GW}
+detection horizon, not by a simultaneous \ac{EM} horizon; in this latter case,
+optimizing the uptime is the only consideration.
+
+\section{Additional Less-Sensitive Detector}
+
+Consider the scheduling problem for the addition of one more detector to an
+existing network of $N$ \acp{IFO}, where the additional detector is a factor $f
+\ll 1$ less sensitive than the typical detector in the network and operates with
+a duty cycle $T_\mathrm{obs} = (1-\tau) T_\mathrm{wall}$ (e.g.\ the current VIGO
+detector has $f \simeq 1/3$).  If we schedule the detector downtime
+synchronously with the remainder of the network (here assumed to have comparable
+duty cycle), then the total $VT$ is
+%
+\begin{equation}
+  \label{eq:low-sens-synch}
+  VT \propto (1-\tau) \left( 1 + f^2 \right)^{3/2} \simeq (1-\tau) \left( 1 + \frac{3}{2} f^2 \right).
+\end{equation}
+%
+On the other hand, if the downtime of this additional detector is scheduled
+randomly, then we have
+%
+\begin{equation}
+  VT \propto (1-\tau)^N \tau + N (1-\tau)^{N} \tau \left( 1 - \frac{1}{N} + f^2 \right)^{3/2} + (1-\tau)^{N+1} \left( 1 + f^2 \right)^{3/2} + \mathcal{O}\left(\tau^2\right).
+\end{equation}
+%
+(The three cases correspond to the $N$ original \acp{IFO} operating, new
+\ac{IFO} down; one of the $N$ original \acp{IFO} down, new \ac{IFO} operating;
+and all \acp{IFO} operating.)  This is approximately
+%
+\begin{equation}
+  \label{eq:low-sens-random}
+  VT \propto \left( 1 - \left[ \frac{3}{2} + \frac{3}{8N} \right] \tau \right) \left( 1 + \frac{3}{2} f^2\right) + \mathcal{O}\left( \tau f^2 \right)
+\end{equation}
+%
+Comparing Eq.\ \eqref{eq:low-sens-synch} and Eq.\ \eqref{eq:low-sens-random}, we
+see that the synchronous strategy dominates the random-downtime strategy in all
+cases.
+
+\section{Additional Comparable-Sensitivity Detector}
+
+Suppose we are considering whether to add an additional detector to the network
+that is comparable sensitivity to the existing network of $N$.  Then in the
+synchronous case we have
+%
+\begin{equation}
+  VT \propto (1-\tau) \left(1 + \frac{1}{N}\right)^{3/2} \simeq (1-\tau) \left( 1 + \frac{3}{2N} \right).
+\end{equation}
+%
+In the random scheduling case we have
+%
+\begin{multline}
+  VT \propto (1-\tau)^N \tau + N (1-\tau)^N \tau + (1-\tau)^{N+1} \left(1 + \frac{1}{N}\right)^{3/2} \\ \simeq \left( 1 - \frac{3}{2} \tau \right) \left( 1 + \frac{3}{2N} \right) + \mathcal{O}\left( \frac{\tau}{N} \right)
+\end{multline}
+%
+Once again, we see that the random-scheduling case is dominated by synchronous
+scheduling case.
+
+\section{Conclusion}
+
+If possible, detector downtimes should be scheduled synchronously.
 
 \bibliography{vtoptimize}
 
